# frotnend-test

./: .gitignore  NOTES.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  deps.py  enums.py  errors.py  events.py  jobs.py  main.py  metrics.py  middleware.py  models.py  seed_data.py  settings.py  store.py  utils.py
backend/app/routes/: __init__.py  deals.py  events.py  ops.py
backend/tests/: test_api.py
frontend/: .cta.json  package-lock.json  package.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: ActivityTimeline.tsx  BorrowerFacts.tsx  DealCard.tsx  DealDashboard.tsx  DocumentsChecklist.tsx  FinancialSummary.tsx  Header.tsx  RequestedTerms.tsx  RiskInsights.tsx  SearchAndFilters.tsx  StageColumn.tsx  TermSheetPlayground.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  deals.$id.tsx  index.tsx
