[project]
name = "krida-deal-desk-mock-api"
version = "0.1.0"
description = "Mock backend service for the Krida Deal Desk frontend take-home"
authors = [{ name = "Krida" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0,<0.112.0",
  "uvicorn[standard]>=0.27.0,<0.28.0",
  "pydantic-settings>=2.2.0,<3.0.0",
  "eval-type-backport>=0.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.25",
  "pytest-asyncio>=0.21",
]

[tool.uvicorn]
factory = true
app = "backend.app.main:create_app"
host = "0.0.0.0"
port = 4343
reload = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
